--- a/Chess/View/GameView.xaml
+++ b/Chess/View/GameView.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Chess.MainWindow"
+﻿<Window x:Class="Chess.View.GameView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Chess"
+        xmlns:local="clr-namespace:Chess.View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="GameView" Height="450" Width="800">
     <Grid>
         
     </Grid>
