added chess board

--- a/Chess/View/GameView.xaml
+++ b/Chess/View/GameView.xaml
@@ -5,8 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chess.View"
         mc:Ignorable="d"
-        Title="GameView" Height="450" Width="800">
+        Title="GameView" Height="800" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <!-- Schachbrettmuster -->
+        <Rectangle Name="A8" Grid.Row="0" Grid.Column="0" Fill="Black">
+        </Rectangle>
+        <Rectangle Name="B8" Grid.Row="0" Grid.Column="1" Fill="White" />
+        <Rectangle Name="C8" Grid.Row="0" Grid.Column="2" Fill="Black" />
+        <Rectangle Name="D8" Grid.Row="0" Grid.Column="3" Fill="White" />
+        <Rectangle Name="E8" Grid.Row="0" Grid.Column="4" Fill="Black" />
+        <Rectangle Name="F8" Grid.Row="0" Grid.Column="5" Fill="White" />
+        <Rectangle Name="G8" Grid.Row="0" Grid.Column="6" Fill="Black" />
+        <Rectangle Name="H8" Grid.Row="0" Grid.Column="7" Fill="White" />
+
+        <Rectangle Grid.Row="1" Grid.Column="0" Fill="White" />
+        <Rectangle Grid.Row="1" Grid.Column="1" Fill="Black" />
+        <Rectangle Grid.Row="1" Grid.Column="2" Fill="White" />
+        <Rectangle Grid.Row="1" Grid.Column="3" Fill="Black" />
+        <Rectangle Grid.Row="1" Grid.Column="4" Fill="White" />
+        <Rectangle Grid.Row="1" Grid.Column="5" Fill="Black" />
+        <Rectangle Grid.Row="1" Grid.Column="6" Fill="White" />
+        <Rectangle Grid.Row="1" Grid.Column="7" Fill="Black" />
+
+        <Rectangle Grid.Row="2" Grid.Column="0" Fill="Black" />
+        <Rectangle Grid.Row="2" Grid.Column="1" Fill="White" />
+        <Rectangle Grid.Row="2" Grid.Column="2" Fill="Black" />
+        <Rectangle Grid.Row="2" Grid.Column="3" Fill="White" />
+        <Rectangle Grid.Row="2" Grid.Column="4" Fill="Black" />
+        <Rectangle Grid.Row="2" Grid.Column="5" Fill="White" />
+        <Rectangle Grid.Row="2" Grid.Column="6" Fill="Black" />
+        <Rectangle Grid.Row="2" Grid.Column="7" Fill="White" />
+
+        <Rectangle Grid.Row="3" Grid.Column="0" Fill="White" />
+        <Rectangle Grid.Row="3" Grid.Column="1" Fill="Black" />
+        <Rectangle Grid.Row="3" Grid.Column="2" Fill="White" />
+        <Rectangle Grid.Row="3" Grid.Column="3" Fill="Black" />
+        <Rectangle Grid.Row="3" Grid.Column="4" Fill="White" />
+        <Rectangle Grid.Row="3" Grid.Column="5" Fill="Black" />
+        <Rectangle Grid.Row="3" Grid.Column="6" Fill="White" />
+        <Rectangle Grid.Row="3" Grid.Column="7" Fill="Black" />
+
+        <Rectangle Grid.Row="4" Grid.Column="0" Fill="Black" />
+        <Rectangle Grid.Row="4" Grid.Column="1" Fill="White" />
+        <Rectangle Grid.Row="4" Grid.Column="2" Fill="Black" />
+        <Rectangle Grid.Row="4" Grid.Column="3" Fill="White" />
+        <Rectangle Grid.Row="4" Grid.Column="4" Fill="Black" />
+        <Rectangle Grid.Row="4" Grid.Column="5" Fill="White" />
+        <Rectangle Grid.Row="4" Grid.Column="6" Fill="Black" />
+        <Rectangle Grid.Row="4" Grid.Column="7" Fill="White" />
+
+        <Rectangle Grid.Row="5" Grid.Column="0" Fill="White" />
+        <Rectangle Grid.Row="5" Grid.Column="1" Fill="Black" />
+        <Rectangle Grid.Row="5" Grid.Column="2" Fill="White" />
+        <Rectangle Grid.Row="5" Grid.Column="3" Fill="Black" />
+        <Rectangle Grid.Row="5" Grid.Column="4" Fill="White" />
+        <Rectangle Grid.Row="5" Grid.Column="5" Fill="Black" />
+        <Rectangle Grid.Row="5" Grid.Column="6" Fill="White" />
+        <Rectangle Grid.Row="5" Grid.Column="7" Fill="Black" />
+
+        <Rectangle Grid.Row="6" Grid.Column="0" Fill="Black" />
+        <Rectangle Grid.Row="6" Grid.Column="1" Fill="White" />
+        <Rectangle Grid.Row="6" Grid.Column="2" Fill="Black" />
+        <Rectangle Grid.Row="6" Grid.Column="3" Fill="White" />
+        <Rectangle Grid.Row="6" Grid.Column="4" Fill="Black" />
+        <Rectangle Grid.Row="6" Grid.Column="5" Fill="White" />
+        <Rectangle Grid.Row="6" Grid.Column="6" Fill="Black" />
+        <Rectangle Grid.Row="6" Grid.Column="7" Fill="White" />
+
+        <Rectangle Grid.Row="7" Grid.Column="0" Fill="White" />
+        <Rectangle Grid.Row="7" Grid.Column="1" Fill="Black" />
+        <Rectangle Grid.Row="7" Grid.Column="2" Fill="White" />
+        <Rectangle Grid.Row="7" Grid.Column="3" Fill="Black" />
+        <Rectangle Grid.Row="7" Grid.Column="4" Fill="White" />
+        <Rectangle Grid.Row="7" Grid.Column="5" Fill="Black" />
+        <Rectangle Grid.Row="7" Grid.Column="6" Fill="White" />
+        <Rectangle Grid.Row="7" Grid.Column="7" Fill="Black" />
     </Grid>
 </Window>
